tests/ui/tokio_select.stderr
error: nondeterministic workflow API detected; use durust::select! instead
 --> tests/ui/tokio_select.rs:5:10
  |
5 | async fn bad(_: BadInput) -> durust::Result<()> {
  |          ^^^
